# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("protobuf_config") {
  include_dirs = [
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google",
    "//third_party/protobuf/src/google/protobuf",
  ]
}

protobuf_lite_sources = [
  "//third_party/protobuf/src/google/protobuf/any.cc",
  "//third_party/protobuf/src/google/protobuf/any.pb.cc",
  "//third_party/protobuf/src/google/protobuf/any_lite.cc",
  "//third_party/protobuf/src/google/protobuf/api.pb.cc",
  "//third_party/protobuf/src/google/protobuf/arena.cc",
  "//third_party/protobuf/src/google/protobuf/compiler/importer.cc",
  "//third_party/protobuf/src/google/protobuf/compiler/parser.cc",
  "//third_party/protobuf/src/google/protobuf/descriptor.cc",
  "//third_party/protobuf/src/google/protobuf/descriptor.pb.cc",
  "//third_party/protobuf/src/google/protobuf/descriptor_database.cc",
  "//third_party/protobuf/src/google/protobuf/duration.pb.cc",
  "//third_party/protobuf/src/google/protobuf/dynamic_message.cc",
  "//third_party/protobuf/src/google/protobuf/empty.pb.cc",
  "//third_party/protobuf/src/google/protobuf/extension_set.cc",
  "//third_party/protobuf/src/google/protobuf/extension_set_heavy.cc",
  "//third_party/protobuf/src/google/protobuf/field_mask.pb.cc",
  "//third_party/protobuf/src/google/protobuf/generated_enum_util.cc",
  "//third_party/protobuf/src/google/protobuf/generated_message_reflection.cc",
  "//third_party/protobuf/src/google/protobuf/generated_message_table_driven.cc",
  "//third_party/protobuf/src/google/protobuf/generated_message_table_driven_lite.cc",
  "//third_party/protobuf/src/google/protobuf/generated_message_table_driven_lite.h",
  "//third_party/protobuf/src/google/protobuf/generated_message_util.cc",
  "//third_party/protobuf/src/google/protobuf/implicit_weak_message.cc",
  "//third_party/protobuf/src/google/protobuf/io/coded_stream.cc",
  "//third_party/protobuf/src/google/protobuf/io/gzip_stream.cc",
  "//third_party/protobuf/src/google/protobuf/io/io_win32.cc",
  "//third_party/protobuf/src/google/protobuf/io/printer.cc",
  "//third_party/protobuf/src/google/protobuf/io/strtod.cc",
  "//third_party/protobuf/src/google/protobuf/io/tokenizer.cc",
  "//third_party/protobuf/src/google/protobuf/io/zero_copy_stream.cc",
  "//third_party/protobuf/src/google/protobuf/io/zero_copy_stream_impl.cc",
  "//third_party/protobuf/src/google/protobuf/io/zero_copy_stream_impl_lite.cc",
  "//third_party/protobuf/src/google/protobuf/map_field.cc",
  "//third_party/protobuf/src/google/protobuf/message.cc",
  "//third_party/protobuf/src/google/protobuf/message_lite.cc",
  "//third_party/protobuf/src/google/protobuf/parse_context.cc",
  "//third_party/protobuf/src/google/protobuf/reflection_internal.h",
  "//third_party/protobuf/src/google/protobuf/reflection_ops.cc",
  "//third_party/protobuf/src/google/protobuf/repeated_field.cc",
  "//third_party/protobuf/src/google/protobuf/service.cc",
  "//third_party/protobuf/src/google/protobuf/source_context.pb.cc",
  "//third_party/protobuf/src/google/protobuf/struct.pb.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/bytestream.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/common.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/int128.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/status.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/statusor.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/stringpiece.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/stringprintf.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/structurally_valid.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/strutil.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/substitute.cc",
  "//third_party/protobuf/src/google/protobuf/stubs/substitute.h",
  "//third_party/protobuf/src/google/protobuf/stubs/time.cc",
  "//third_party/protobuf/src/google/protobuf/text_format.cc",
  "//third_party/protobuf/src/google/protobuf/timestamp.pb.cc",
  "//third_party/protobuf/src/google/protobuf/type.pb.cc",
  "//third_party/protobuf/src/google/protobuf/unknown_field_set.cc",
  "//third_party/protobuf/src/google/protobuf/util/delimited_message_util.cc",
  "//third_party/protobuf/src/google/protobuf/util/field_comparator.cc",
  "//third_party/protobuf/src/google/protobuf/util/field_mask_util.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/constants.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/datapiece.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/datapiece.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/default_value_objectwriter.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/default_value_objectwriter.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/error_listener.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/error_listener.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/expecting_objectwriter.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/field_mask_utility.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/field_mask_utility.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/json_escaping.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/json_escaping.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/json_objectwriter.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/json_objectwriter.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/json_stream_parser.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/json_stream_parser.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/location_tracker.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/mock_error_listener.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/object_location_tracker.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/object_source.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/object_writer.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/object_writer.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/proto_writer.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/proto_writer.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/protostream_objectsource.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/protostream_objectsource.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/protostream_objectwriter.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/protostream_objectwriter.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/structured_objectwriter.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/type_info.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/type_info.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/type_info_test_helper.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/type_info_test_helper.h",
  "//third_party/protobuf/src/google/protobuf/util/internal/utility.cc",
  "//third_party/protobuf/src/google/protobuf/util/internal/utility.h",
  "//third_party/protobuf/src/google/protobuf/util/json_util.cc",
  "//third_party/protobuf/src/google/protobuf/util/message_differencer.cc",
  "//third_party/protobuf/src/google/protobuf/util/time_util.cc",
  "//third_party/protobuf/src/google/protobuf/util/type_resolver_util.cc",
  "//third_party/protobuf/src/google/protobuf/wire_format.cc",
  "//third_party/protobuf/src/google/protobuf/wire_format_lite.cc",
  "//third_party/protobuf/src/google/protobuf/wrappers.pb.cc",
]

ohos_shared_library("protobuf_standard") {
  configs = [
    ":protobuf_config",
    "//build/config/compiler:rtti",
  ]
  sources = protobuf_lite_sources
  remove_configs = [ "//build/config/compiler:no_rtti" ]
  defines = [ "HAVE_PTHREAD" ]
  cflags_cc = [
    "-Wall",
    "-Werror",
    "-fPIC",
    "-frtti",
    "-U__ANDROID__",
    "-Wno-sign-compare",
    "-Wno-error=unused-parameter",
    "-Wno-error=unused-const-variable",
    "-Wno-error=unneeded-internal-declaration",
    "-Wno-inconsistent-missing-override",
  ]
  ldflags = [ "-shared" ]
  subsystem_name = "global"
  part_name = "i18n_standard"
  install_enable = true
}
